--- a/web/src/Home/components/Home.module.css
+++ b/web/src/Home/components/Home.module.css
@@ -10,13 +10,13 @@
   justify-content: center;
 }
 
-.hmTitle {
+.hmName {
   font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
 }
 
-.hmContent {
+.hmBioContainer {
   display: flex;
   align-items: center;
   margin: 10px 0 0 0;
@@ -25,20 +25,20 @@
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
-  .hmText {
+  .hmBio {
     margin: 0 10px;
     color: var(--black);
     transition: none;
   }
 }
 
-.hmText {
+.hmBio {
   margin: 0 10px;
   color: var(--black);
   transition: opacity 0.3s ease;
 }
 
-.hmText:hover,
-.hmText:focus {
+.hmBio:hover,
+.hmBio:focus {
   opacity: 0.7;
 }
