feat(web): add music

--- a/web/src/Home/components/Home.module.css
+++ b/web/src/Home/components/Home.module.css
@@ -10,6 +10,11 @@
   justify-content: center;
 }
 
+.hmNameContainer {
+  display: flex;
+  padding: 0 0 0 57px;
+}
+
 .hmName {
   font-size: 36px;
   font-weight: 700;
