style(font): Neo Sans Pro

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,6 +1,21 @@
 @import-normalize;
 @import '~bulma/css/bulma.css';
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+@font-face {
+  font-family: NeoSansPro;
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('./shared/fonts/NeoSansProRegular.otf') format('opentype');
+}
+
+@font-face {
+  font-family: NeoSansPro;
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('./shared/fonts/NeoSansProBold.otf') format('opentype');
+}
 
 #root {
   height: 100%;
@@ -12,7 +27,7 @@ html {
 
 body {
   height: 100%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: NeoSansPro, sans-serif;
 
   --gray: #717171;
   --black: #4a4a4a;
